2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SemanticRule.cs: fixed Bug 393118 - URL
	  is not underlined completely and indeed redirects to only the
	  domain

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 393037 - CTRL+F and writing
	  text produces NRE'

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed Bug 393411 - Pasted text
	  offset is wrong when there is a selection

2008-05-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 392655
	  - The 'stopateol' highlighting behaviour doesn't always work'.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 389561 - Regression:
	  Middle-click paste does not insert at cursor location'.

2008-05-20  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed 'Bug 385844 - XML syntax
	  highlighting is unreliable' & 'Bug 389352 - Regression: big comment
	  is not coloured'.

2008-05-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Optimized background buffer.

2008-05-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/IBuffer.cs, Mono.TextEditor/RedBlackTree.cs,
	  Mono.TextEditor/LineSegmentTree.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/GapBuffer.cs, Mono.TextEditor/LineSegment.cs: Fixed
	  text editor memory leak.

2008-05-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextMarker.cs: fixed cut&paste error.

2008-05-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextMarker.cs: exposed color property of the text
	  marker

2008-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextMarker.cs: Moved the code that draws error
	  underlines to a new UnderlineMarker. Created LineBackgroundMarker,