@@ -1,3 +1,7 @@
+2008-05-26  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/TextViewMargin.cs: handled possible nullref.
+
 2008-05-22  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor.Highlighting/SemanticRule.cs: fixed Bug 393118 - URL
